[package]
name = "rimage"
version = "0.11.0-next"
edition = "2021"
description = "Optimize images natively with best-in-class codecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Vladyslav Vladinov <vladinov.dev@gmail.com>"]
keywords = ["image", "compression", "encoder"]
categories = ["compression", "multimedia::images"]
repository = "https://github.com/SalOne22/rimage"
documentation = "https://docs.rs/rimage"
homepage = "https://lib.rs/rimage"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[features]
default = ["resize", "quantization"]

# Enables utilization of threads
threads = ["zune-image/threads", "zune-imageprocs/threads", "imagequant?/threads"]

# Enables resize operation
resize = ["dep:fast_image_resize"]
# Enables quantize operation
quantization = ["dep:imagequant", "dep:rgb"]

[dependencies]
zune-core = "0.4.12"
zune-image = { version = "0.4.15", default-features = false, features = ["simd"]}
zune-imageprocs = { version = "0.4.15", default-features = false, features = ["avx2", "sse2", "sse3", "sse41" ] }
fast_image_resize = { version = "3.0.4", optional = true }
imagequant = { version = "4.3.0", default-features = false, optional = true }
rgb = { version = "0.8.37", optional = true }
