[package]
name = "rimage"
version = "0.11.0-next.0"
edition = "2021"
description = "Optimize images natively with best-in-class codecs"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Vladyslav Vladinov <vladinov.dev@gmail.com>"]
keywords = ["image", "compression", "encoder"]
categories = ["compression", "multimedia::images"]
repository = "https://github.com/SalOne22/rimage"
documentation = "https://docs.rs/rimage"
homepage = "https://lib.rs/rimage"
include = ["/README.md", "/Cargo.toml", "/src/**/*.rs"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "rimage"
path = "./src/main.rs"
required-features = ["build-binary"]

[features]
default = [
    "resize",
    "quantization",
    "jpegli",
    "oxipng",
    "webp",
    "avif",
    "threads",
    "metadata",
]

# Used for binary
build-binary = [
    "dep:anyhow",
    "dep:clap",
    "dep:indoc",
    "dep:rayon",
    "dep:pretty_env_logger",
    "dep:zune-imageprocs",
    "dep:glob",
    "zune-image/default",
]

# Enables utilization of threads
threads = ["imagequant?/threads", "oxipng?/parallel"]
# Enables metadata support
metadata = ["dep:kamadak-exif", "zune-image/metadata"]

# Enables resize operation
resize = ["dep:fast_image_resize"]
# Enables quantize operation
quantization = ["dep:imagequant", "dep:rgb"]

# Enables jpegli codec
jpegli = ["dep:jpegli"]
# Enables oxipng codec
oxipng = ["dep:oxipng"]
# Enables webp codec
webp = ["dep:webp"]
# Enables avif codec
avif = ["dep:ravif", "dep:libavif", "dep:rgb"]

[dependencies]
zune-core = "0.4.12"
log = "0.4.21"
zune-image = { version = "0.4.15", default-features = false }
fast_image_resize = { version = "3.0.4", optional = true }
imagequant = { version = "4.3.0", default-features = false, optional = true }
rgb = { version = "0.8.37", optional = true }
jpegli = { version = "0.1", optional = true }
oxipng = { version = "9.0", default-features = false, features = [
    "zopfli",
    "filetime",
], optional = true }
webp = { version = "0.3.0", default-features = false, optional = true }
ravif = { version = "0.11.4", optional = true }
libavif = { version = "0.13.0", default-features = false, features = [
    "codec-aom",
], optional = true }

# cli
anyhow = { version = "1.0.80", optional = true }
clap = { version = "4.5.1", features = ["cargo", "string"], optional = true }
indoc = { version = "2.0.5", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
rayon = { version = "1.10.0", optional = true }
zune-imageprocs = { version = "0.4.15", features = ["exif"], optional = true }
kamadak-exif = { version = "0.5.5", optional = true }

[target.'cfg(windows)'.dependencies]
glob = { version = "0.3.1", optional = true }

[dev-dependencies]
zune-core = { version = "0.4.12", features = ["std"] }
zune-image = "0.4.15"
