[package]
name          = "rimage"
version       = "0.12.2"
edition       = "2021"
description   = "Optimize images natively with best-in-class codecs"
license       = "MIT OR Apache-2.0"
readme        = "README.md"
authors       = ["Vladyslav Vladinov <vladinov.dev@gmail.com>"]
keywords      = ["image", "compression", "encoder"]
categories    = ["compression", "multimedia::images"]
repository    = "https://github.com/SalOne22/rimage"
documentation = "https://docs.rs/rimage"
homepage      = "https://lib.rs/rimage"
include       = ["/README.md", "/Cargo.toml", "/src/**/*.rs"]
build         = "build.rs"

[package.metadata.winres]
LegalCopyright  = "Copyright Vladyslav Vladinov © 2024"
FileDescription = "Powerful img optimization CLI tool by Rust"

[build-dependencies]
winres = { version = "0.1.12", default-features = false }

[profile.release]
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"

[[bin]]
name              = "rimage"
path              = "./src/main.rs"
required-features = ["build-binary"]

[features]
default = [
    "resize",
    "quantization",
    "mozjpeg",
    "oxipng",
    "webp",
    "avif",
    "tiff",
    "threads",
    "metadata",
]

# Used for binary
build-binary = [
    "dep:anyhow",
    "dep:clap",
    "dep:indoc",
    "dep:rayon",
    "dep:pretty_env_logger",
    "dep:zune-imageprocs",
    "dep:glob",
    "zune-image/default",
    "dep:indicatif",
    "dep:indicatif-log-bridge",
    "dep:console",
    "dep:regex",
    "dep:little_exif",
]

# Enables utilization of threads
threads = ["imagequant?/threads", "mozjpeg?/parallel", "oxipng?/parallel"]
# Enables metadata support
metadata = ["zune-image/metadata", "dep:serde", "dep:serde_json"]

# Enables resize operation
resize = ["dep:fast_image_resize"]
# Enables quantize operation
quantization = ["dep:imagequant", "dep:rgb"]

# Enables mozjpeg codec
mozjpeg = ["dep:mozjpeg"]
# Enables oxipng codec
oxipng = ["dep:oxipng"]
# Enables webp codec
webp = ["dep:webp"]
# Enables avif codec
avif = ["dep:ravif", "dep:libavif", "dep:rgb"]
# Enables tiff codec
tiff    = ["dep:tiff"]
icc     = ["dep:lcms2"]
console = ["dep:console"]

[dependencies]
zune-core = "0.5.0-rc2"
log = "0.4.22"
zune-image = { version = "0.5.0-rc0", default-features = false }
fast_image_resize = { version = "3.0.4", optional = true }
imagequant = { version = "4.3.3", default-features = false, optional = true }
rgb = { version = "0.8.45", optional = true }
mozjpeg = { version = "0.10.13", default-features = false, features = [
    "with_simd",
], optional = true }
oxipng = { version = "9.1", default-features = false, features = [
    "zopfli",
    "filetime",
], optional = true }
webp = { version = "0.3.1", default-features = false, optional = true }
ravif = { version = "0.12.0", optional = true }
libavif = { version = "0.14.0", default-features = false, features = [
    "codec-aom",
], optional = true }
lcms2 = { version = "6.1.0", optional = true }
tiff = { version = "0.9.1", default-features = false, optional = true }

# cli
anyhow = { version = "1.0.98", optional = true }
clap = { version = "4.5.46", features = ["cargo", "string"], optional = true }
indoc = { version = "2.0.6", optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }
rayon = { version = "1.10.0", optional = true }
zune-imageprocs = { version = "0.5.0-rc0", features = [
    "exif",
], optional = true }
little_exif = { version = "0.6.20", optional = true }
indicatif = { version = "0.18.0", features = ["rayon"], optional = true }
indicatif-log-bridge = { version = "0.2.3", optional = true }
console = { version = "0.15.11", optional = true }
regex = { version = "1.11.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.141", optional = true }

[target.'cfg(windows)'.dependencies]
glob = { version = "0.3.2", optional = true }

[dev-dependencies]
zune-core = { version = "0.5.0-rc2", features = ["std"] }
zune-image = "0.5.0-rc0"
